# crius-ephemeris-core

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
crius_ephemeris_core/: __init__.py  protocols.py  service.py  testing.py  types.py  validation.py
crius_ephemeris_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: protocols.rst  types.rst
docs/examples/: adapter_implementation.rst  basic_usage.rst
tests/: __init__.py  test_protocols.py  test_types.py  test_version.py
